<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_footprint_black_24dp"
            android:title="@string/crear" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/lista" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/eliminar" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/editar" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/creditos" />

</menu>

<!-- tools:showIn="navigation_view" -->
<!-- xmlns:tools="http://schemas.android.com/tools" -->
<!-- <group android:checkableBehavior="single"> -->